fixed spacing on mobile

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,6 @@
 html{
   scroll-behavior: smooth;
-  overflow: hidden;
-  min-width: 400px;
+  overflow-x: hidden;
   width: 100vw;
+  height: 100vh;
 }
